# thingy91-lorawan-nbiot

./: .gitignore  Cargo.toml  README.md  blinky.hex  memory.x  spm.hex
.cargo/: config.toml
app/: Cargo.toml
app/.cargo/: config.toml
app/src/: lib.rs  main.rs
applib/: Cargo.toml
applib/src/: lib.rs
nrf-app/: Cargo.toml
nrf-app/src/: command.rs  config.rs  main.rs
src/: main.rs
