[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "thingy52-lorawan-nbiot"
version = "0.1.0"

[dependencies]
bme680 = "0.5.1"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
nrf9160-dk-bsp = { git = "https://github.com/nrf-rs/nrf9160-dk" }
panic-reset = "0.1.0"
panic-halt = "0.2.0"
spin = "0.9.0"

lorawan-encoding = { version = "0.6.2", default-features = false }

[[bin]]
name = "thingy52-lorawan-nbiot"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
