[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "thingy52-lorawan-nbiot"
version = "0.1.0"

[dependencies]
bme680 = { git = "https://github.com/huntc/bme680.git", branch = "pass-delay" }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
nrf9160-dk-bsp = { git = "https://github.com/nrf-rs/nrf9160-dk" }
panic-reset = "0.1.0"
panic-halt = "0.2.0"
spin = "0.9.0"

applib = { path = "../applib" }

[workspace]

[[bin]]
name = "thingy52-lorawan-nbiot"
test = false
bench = false
