[package]
authors = ["huntc <huntchr@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "thingy91-lorawan-nbiot"
version = "0.1.0"

[dependencies]
bme680 = "0.6.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
embedded-hal = { version = "0.2.4", features = [ "unproven" ] }
nrf9160-dk-bsp = { git = "https://github.com/huntc/nrf9160-dk", branch = "upgrade" }
panic-reset = "0.1.0"
panic-halt = "0.2.0"
spin = "0.9.0"

applib = { path = "../applib" }

[workspace]

[[bin]]
name = "thingy91-lorawan-nbiot"
test = false
bench = false